spectec/test/elab/neg/ctx-type-already-defined-in-var.spectec
;; Triggers elaborate.ml:1494 — `var` declaration whose name collides with an
;; existing typdef.

syntax foo = nat

var foo : int
